crates/mdbook-rustdoc-links/tests/compilation_error/stderr/data.txt
 WARN mdbook-rustdoc-links: `cargo check` did not succeed

Caused by:
    0: --- rustc errors
       error[E0311]: the parameter type `T` may not live long enough
        --> src/lib.rs:4:5
         |
       3 | pub fn no_restriction<T>(x: &()) -> &() {
         |                             --- the parameter type `T` must be valid for the anonymous lifetime defined here...
       4 |     with_restriction::<T>(x)
         |     ^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
         |
       help: consider adding an explicit lifetime bound
         |
       3 | pub fn no_restriction<'a, T: 'a>(x: &'a ()) -> &'a () {
         |                       +++  ++++      ++         ++
       
       For more information about this error, try `rustc --explain E0311`.
    1: --- cargo stderr
       [CARGO_STDERR]
       error: could not compile `compilation_error` (lib) due to 1 previous error
    2: command exited with exit status: 101
    3: command: cd "[TEST_DIR]/compilation_error" && "cargo" "check" "--message-format" "json" "--config" "term.color = 'never'" "--config" "term.progress.when = 'never'"
       
ERROR mdbook-rustdoc-links: build failed
[LLVM_COV_STDERR]
ERROR mdbook_core::utils: The "rustdoc-links" preprocessor exited unsuccessfully with exit status: 1 status
